# task-manager

./: .env.prod.example  .gitignore  DEPLOYMENT.md  MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  QUICK_FIX.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: Caddyfile.template
.github/scripts/: check-deployment.sh  deploy-docker.sh  setup-caddy.sh  setup-fastapi.sh  setup-nextjs.sh  setup-packages.sh  setup-systemd.sh
.github/workflows/: ci.yml  deploy.yml
.windsurf/rules/: code-style-guide-fastapi.md  code-style-guide-next.md
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  coverage.lcov  poetry.toml  pyproject.toml
apps/backend/app/: config.py  main.py
apps/backend/app/core/: __init__.py  auth.py  background_processor.py  config.py  database.py  interfaces.py  logger.py  modules.py  persistence.py
apps/backend/app/core/alembic/: README  env.py
apps/backend/app/core/alembic/versions/: a3ffb856e1cb_added_user_activity_model.py  c835d33ab787_create_tasks_model.py  e4441e68a3aa_add_user_model.py
apps/backend/app/modules/: README.md  __init__.py
apps/backend/app/modules/health/: __init__.py  router.py  schemas.py
apps/backend/app/modules/health/tests/: test_health.py
apps/backend/app/modules/tasks/: README.md  __init__.py  file_handler.py  interfaces.py  jobs.py  models.py  repository.py  router.py  schemas.py  service.py
apps/backend/app/modules/tasks/tests/: conftest.py  test_file_handler.py  test_router.py  test_schemas.py  test_tasks.py
apps/backend/app/modules/users/: __init__.py  interfaces.py  jwt.py  models.py  repository.py  router.py  schemas.py  security.py  service.py  validations.py
apps/backend/app/modules/users/tests/: README.md  __init__.py  test_repository.py  test_router.py  test_schemas.py  test_service.py  test_users.py  test_validations.py
apps/backend/data/: db.json
apps/backend/tests/: test_app_initialization.py  test_database.py  test_hello_world_api.py  test_interfaces.py  test_logger.py  test_module_loader.py
apps/frontend/: .dockerignore  COVERAGE.md  Dockerfile  TEST_FIX_SUMMARY.md  env.example  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/(auth)/: actions.ts  layout.tsx
apps/frontend/app/(dashboard)/: layout.tsx
apps/frontend/app/__tests__/: page.test.tsx
apps/frontend/components/: delete-task-dialog.tsx  draggable-task-card.tsx  droppable-column.tsx  header.tsx  task-card-content.tsx  task-form.tsx  task-list.tsx  task-modal.tsx  theme-provider.tsx  theme-toggle.tsx
apps/frontend/components/__tests__/: header.test.tsx  nav-item.test.tsx  task-form.test.tsx  task-list.test.tsx  theme-toggle.test.tsx
apps/frontend/components/dnd/: draggable-task-card.tsx  droppable-column.tsx
apps/frontend/components/navigation/: header.tsx  nav-item.tsx  user-profile-dropdown.tsx  user-profile-modal.tsx
apps/frontend/components/tasks/: task-card-content.tsx  task-empty-state.tsx  (+6 more)
apps/frontend/docs/: EXPORT_IMPORT_FEATURE.md  IMPORT_TROUBLESHOOTING.md
apps/frontend/hooks/: use-task-actions.ts  use-task-api.ts  use-task-crud.ts  use-task-dnd.ts  use-task-export-import.ts  use-task-filters.ts  use-task-manager.ts  use-task-modals.ts  use-toast.ts
apps/frontend/lib/: api-client-server.ts  api-client.ts  auth.ts  cookies.ts  http-client.ts  middleware-helpers.ts  navigation.ts  task-constants.ts  task-exporter.ts  task-form-validation.ts  task-importer.ts  theme-storage.ts
(+34 files in other folders)
