[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rakshith Vikramraj",email = "rakshith@incubyte.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.0,<0.120.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:fastapi._compat.v1"
]
testpaths = ["tests", "app/modules"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",  # Exclude ellipsis (...) in Protocol definitions
    "@(abc\\.)?abstractmethod",
    "class .*\\(Protocol\\):",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
